--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 
 <!-- Mirrored from edublink.html.devsblink.com/faq.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 11 Sep 2023 22:52:24 GMT -->
 <head>
+
     <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Al Wajeez | CEM</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#1ab69d">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
     <!-- CSS
