website update + add checkout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="zxx" lang="" dir="rtl">
+<html class="no-js" lang="zxx" dir="rtl">
 
 
 <!-- Mirrored from edublink.html.devsblink.com/faq.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 11 Sep 2023 22:52:24 GMT -->
@@ -9,7 +9,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Al Wajeez | CEM</title>
-    <meta name="description" content="">
+    <meta name="description" content="تحليل ومتابعة نتائج المتوسطة الخاصة بمستشار التوجيه والإرشاد المدرسي والمهني">
+    <meta name="keywords" content="Al Wajeez, Al Wajeez CEM, cosp, تحليل, تحليل النتائج, مقارنة النتائج, شهادة التعليم المتوسط,  متابعة النتائج,  المتوسطة,  مستشار,  مستشار التوجيه,  مستشار التوجيه المدرسي والمهني,  مستشار التوجيه والارشاد المدرسي والمهني,  برنامج,  برنامج تحليل النتائج,  وزارة التربية,  الجزائر, مديرية التربية">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#1ab69d">
     <!-- Favicon -->
@@ -409,7 +410,7 @@
                         <div class="about-content">
                             <div class="section-title section-left" data-sal-delay="150" data-sal="slide-up" data-sal-duration="800">
                                 <span class="pre-title">تواصل معنا</span>
-                                <h2 class="title">نحن نقدم أفضل <span class="color-secondary">الخدمات </span> الإدارية لكم.</h2>
+                                <h2 class="title">نحن نقدم أفضل <span class="color-secondary">البرامج </span> الإدارية لكم.</h2>
                                 <span class="shape-line"><i class="icon-19"></i></span>
                                 <p>يمكنكم التواصل معنا مباشرة عبر البريد الإلكتروني، الذي من خلاله سنقوم بالرد على جميع طلاباتكم أو إستفسارتكم في أقل من 24 ساعة..</p>
                             </div>
@@ -1368,7 +1369,7 @@
         <!--=        Footer Area Start          =-->
         <!--=====================================-->
         <!-- Start Footer Area  -->
-
+        <footer class="edu-footer footer-dark bg-image footer-style-2">
             <div class="copyright-area">
                 <div class="container">
                     <div class="row">
