--- a/index.html
+++ b/index.html
@@ -1329,7 +1329,7 @@
                         <div class="edu-course course-style-3 course-box-shadow">
                             <div class="inner">
                                 <div class="thumbnail">
-                                    <a href="#">
+                                    <a href="Khadamat.html">
                                         <img src="assets/images/course/course-10.jpg" alt="Course Meta">
                                     </a>
                                     <div class="time-top">
