--- a/Khadamat.html
+++ b/Khadamat.html
@@ -611,14 +611,14 @@
                                     <div class="form-group">
                                         <div class="edu-form-check">
                                             <input type="checkbox" id="Paybank" name="payment">
-                                            <label for="pay-bank">التحويل المصرفي المباشر</label>
+                                            <label for="Paybank">التحويل المصرفي المباشر</label>
                                         </div>
                                         <p>يتم ذلك بإرسال حوالة بريدية إلى اسم ولقب المكلف بالخدمة، المدينة، الولاية، الرمز البريدي..</p>
                                     </div>
                                     <div class="form-group">
                                         <div class="edu-form-check">
                                             <input type="checkbox" id="Paypal" name="payment">
-                                            <label for="pay-pal">بريدي موب (البطاقة الذهبية)</label>
+                                            <label for="Paypal">بريدي موب (البطاقة الذهبية)</label>
                                             <p>يتم ذلك عبر الهاتف مباشرة التحويل من حساب إلى حساب.</p>
                                             <a href="https://www.poste.dz/services/professional/baridimobweb">ماهو تطبيق بريدي موب؟</a>
                                         </div>
