--- a/Khadamat.html
+++ b/Khadamat.html
@@ -436,31 +436,31 @@
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <label>الإسم*</label>
-                                            <input name="FName" type="text" id="FName" placeholder="الإسم" required>
+                                            <input name="FName" type="text" id="FName" placeholder="الإسم">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <label>اللقب*</label>
-                                            <input name="SName" type="text" id="SName" placeholder="اللقب" required="">
+                                            <input name="SName" type="text" id="SName" placeholder="اللقب">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label>البريد الإلكتروني*</label>
-                                    <input name="Email" type="email" id="Email" placeholder="البريد الإلكتروني" required>
+                                    <input name="Email" type="email" id="Email" placeholder="البريد الإلكتروني">
                                 </div>
                                 <div class="form-group">
                                     <label>رابط حساب على الفايسبوك (في حالة تريد التواصل معنا عبر المسنجر) </label>
-                                    <input name="Flink" type="url" id="Flink" placeholder="البريد الإلكتروني" required>
+                                    <input name="Flink" type="url" id="Flink" placeholder="البريد الإلكتروني">
                                 </div>
                                 <div class="form-group">
                                     <label>رقم الهاتف*</label>
-                                    <input name="Tel" type="tel" id="Tel" placeholder="00 00 00 000 213+" required>
+                                    <input name="Tel" type="tel" id="Tel" placeholder="00 00 00 000 213+">
                                 </div>
                                 <div class="form-group">
                                             <label>مديرية التربية*</label>
-                                            <select name="Willaya" id="Willaya" required>
+                                            <select name="Willaya" id="Willaya">
                                             <option value=" مديرية التربية لولاية ">مديرية التربية لولاية</option>
                                             <option value=" مديرية التربية لولاية أدرار ">مديرية التربية لولاية أدرار</option>
                                             <option value=" مديرية التربية لولاية الشلف ">مديرية التربية لولاية الشلف</option>
@@ -518,7 +518,7 @@
 
                                 <div class="form-group">
                                     <label>مركز التوجيه*</label>
-                                            <input name="Orientation" type="text" id="Orientation" placeholder="مركز التوجيه" required>
+                                            <input name="Orientation" type="text" id="Orientation" placeholder="مركز التوجيه">
                                 </div>
 
                                 <div class="form-group">
@@ -625,7 +625,7 @@
                                     </div>
                                 </div>
                                  
-                                <a class="edu-btn order-place" onclick="sendWhatsAppMessage()">تأكيد وإرسال الطلب</a>
+                                <a class="edu-btn order-place" type="button" onclick="sendWhatsAppMessage()">تأكيد وإرسال الطلب</a>
                             </div>
                         </div>
                 </form>
