--- a/Khadamat.html
+++ b/Khadamat.html
@@ -601,6 +601,7 @@
                                 <div class="summery-table-wrap">
                                     <label>إجمالي الخدمات</label>
                                         <input name="Results" type="text" id="Results" disabled>
+                                        <input name="Combin" type="text" id="Combin" hidden>
                                 </div>
                             </div>
                             <div class="order-payment">
