--- a/index.html
+++ b/index.html
@@ -550,6 +550,51 @@
         </div>
 
         <!--=====================================-->
+        <!--=         Work Area Start           =-->
+        <!--=====================================-->
+        <div class="edu-section-gap edu-about-area about-style-5">
+            <div class="container">
+                <div class="section-title section-center" data-sal-delay="150" data-sal="slide-up" data-sal-duration="800">
+                    <span class="pre-title pre-textsecondary">خدمات</span>
+                    <h2 class="title">خدمات  برنامج <span class="color-primary">الوجيز</span> <br> نحن نعرض عليكم خدماتنا  بطريقة إحترافية<br> عن بعد </h2>
+                </div>
+                <div class="row g-5 align-items-center">
+                    <div class="col-lg-6">
+                        <div class="about-image-gallery">
+                            <img class="main-img-1" src="assets/images/about/about-08.jpg" data-sal-delay="150" data-sal="fade" data-sal-duration="800" alt="About Image">
+                            <ul class="shape-group">
+                                <li class="shape-1" data-sal-delay="500" data-sal="fade" data-sal-duration="200">
+                                    <img class="rotateit" src="assets/images/about/shape-09.png" alt="Shape">
+                                </li>
+                                <li class="shape-2" data-sal-delay="500" data-sal="fade" data-sal-duration="200">
+                                    <img src="assets/images/about/shape-10.png" alt="Shape">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="about-content" data-sal-delay="150" data-sal="slide-up" data-sal-duration="800">
+                            <p>الوجيز هو موقع يقدم مجموعة متنوعة من الخدمات التعليمية عبر الإنترنت. يساعدك الموقع في تحليل نتائج طلاب المرحلة الإعدادية عن بُعد بمهنية ودقة عالية. بفضل فريقنا المحترف في التحليل الإحصائي، نقدم خدمات متميزة تشمل تقييم النتائج، وتحليلها بشكل شامل لفهم تطور الطلاب وأدائهم بدقة، مما يمكّن المعلمين والمدرسين من اتخاذ القرارات الأمثل في عملية التعليم والتحفيز على التحسين المستمر.</p>
+                            <p>بالإضافة إلى ذلك، يقدم موقع الوجيز خدمات أخرى في مجال التحليل الإحصائي تُعنى بتقديم البيانات والإحصاءات بشكل متقن وواضح، مما يُسهم في فهم الاتجاهات والأنماط والتنبؤ بالتطورات المستقبلية في مجال التعليم عن بُعد.</p>
+                            <ul class="features-list">
+                                <li>تحليل نتائج التلاميذ في الطور الإعدادي</li>
+                                <li>إختبار وتحليل البيانات النفسية، الاجتماعية والجامعية</li>
+                                <li>الإستشارة العلمية للبحوث، المقالات والمذكرات الجامعية (علم النفس وعلوم التربية والأرطفونيا)</li>
+                            </ul>
+                            <a href="Khadamat.html" class="edu-btn">قدم طلبك اليوم </i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <ul class="shape-group">
+                <li class="shape-1" data-sal-delay="500" data-sal="fade" data-sal-duration="200">
+                    <img class="d-block-shape-light" src="assets/images/about/shape-35.png" alt="Shape">
+                    
+                </li>
+            </ul>
+        </div>
+
+        <!--=====================================-->
         <!--=           CTA Area Start          =-->
         <!--=====================================-->
         <!-- Start CTA Area  -->
@@ -1329,7 +1374,7 @@
                         <div class="edu-course course-style-3 course-box-shadow">
                             <div class="inner">
                                 <div class="thumbnail">
-                                    <a href="Khadamat.html">
+                                    <a href="#">
                                         <img src="assets/images/course/course-10.jpg" alt="Course Meta">
                                     </a>
                                     <div class="time-top">
