--- a/Khadamat.html
+++ b/Khadamat.html
@@ -394,7 +394,9 @@
                                 <span class="pre-title">تواصل معنا</span>
                                 <h2 class="title">نحن نقدم أفضل <span class="color-secondary">الخدمات </span> الإدارية لكم.</h2>
                                 <span class="shape-line"><i class="icon-19"></i></span>
-                                <p>يمكنكم التواصل معنا مباشرة عبر البريد الإلكتروني، الذي من خلاله سنقوم بالرد على جميع طلاباتكم أو إستفسارتكم في أقل من 24 ساعة..</p>
+                                <p>يمكنكم التواصل معنا مباشرة عبر الواتسب، الذي من خلاله سنقوم بالرد على جميع طلاباتكم أو إستفسارتكم في أقل من 24 ساعة..</p>
+                                <p>الخدمة لا تدعم التواصل عبر البريد الإلكتروني بعد.</p>
+                                <p>يرجى ملئ جميع الخاناتة لا نرد على الطلبات الغير كاملة، نشكركم على تفهمكم.</p>
                             </div>
                         </div>
                     </div>    
@@ -423,7 +425,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>رقم الهاتف*</label>
-                                    <input name="Tel" type="tel" id="Tel" placeholder="رقم الهاتف">
+                                    <input name="Tel" type="tel" id="Tel" placeholder="رقم الهاتف ليس ضروري">
                                 </div>
                                 <div class="form-group">
                                             <label>مديرية التربية*</label>
@@ -495,7 +497,7 @@
                             <div class="edu-course-widget widget-category collapsed">      
                                 <div class="inner">
 
-                                    <label class="widget-title widget-toggle">يمكنكم اختيار اكثر من خدمت</label>
+                                    <label class="widget-title widget-toggle">يمكنكم اختيار اكثر من خدمة</label>
                                     <div class="content">
                                         <div class="edu-form-check">
                                             <input type="checkbox" name="check1" id="cat-check1" value="100">
@@ -574,7 +576,11 @@
                             <div class="order-payment">
                                 <label>طريقة الدفع</label>
                                 <br>
+                                <br>
+                                <br>
                                 <a>الدفع يتم مباشرة بعد إستلامكم للعمل في  غضون 24/48 ساعة.</a>
+                                <br>
+                                <br>
                                 <div class="payment-method">
                                     <div class="form-group">
                                         <div class="edu-form-check">
@@ -620,12 +626,6 @@
         </footer>
         <!-- End Footer Area  -->
 
-    </div>
-
-    <div class="rn-progress-parent">
-        <svg class="rn-back-circle svg-inner" width="100%" height="100%" viewBox="-1 -1 102 102">
-            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
-        </svg>
     </div>
 
     <!-- JS
