--- a/course.html
+++ b/course.html
@@ -88,8 +88,8 @@
                                             <li>
                                                 <ul class="submenu mega-sub-menu-01">
                                                     <li>
-                                                        <a href="index.html">
-                                                            <img src="assets/images/others/mega-menu-image.webp" alt="advertising Image">
+                                                        <a href="https://t.me/Al_Wajeez_topic">
+                                                            <img src="assets/images/others/mega-menu-image.png" alt="advertising Image">
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -158,8 +158,8 @@
                                 <li>
                                     <ul class="submenu mega-sub-menu-01">
                                         <li>
-                                            <a href="index.html">
-                                                <img src="assets/images/others/mega-menu-image.webp" alt="advertising Image">
+                                            <a href="https://t.me/Al_Wajeez_topic">
+                                                <img src="assets/images/others/mega-menu-image.png" alt="advertising Image">
                                             </a>
                                         </li>
                                     </ul>
