--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="inner">
                     <div class="header-top">
                         <div class="logo">
-                            <a href="#">
+                            <a href="index.html">
                                 <img class="logo-light" src="assets/images/logo/logo-dark.png" alt="Corporate Logo">
                                 <img class="logo-dark" src="assets/images/logo/logo-white.png" alt="Corporate Logo">
                             </a>
@@ -162,7 +162,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class=""><a href="#">الدروس</a>
+                        <li class=""><a href="course.html">الدروس</a>
                         </li>
                         <li class=""><a href="terms-condition.html">سياسة خصوصية</a>
                         </li>
