--- a/terms-condition.html
+++ b/terms-condition.html
@@ -57,7 +57,7 @@
                     <div class="header-navbar">
                         <div class="header-brand">
                             <div class="logo">
-                                <a href="#">
+                                <a href="index.html">
                                     <img class="logo-light" src="assets/images/logo/logo-dark.png" alt="Corporate Logo">
                                     <img class="logo-dark" src="assets/images/logo/logo-white.png" alt="Corporate Logo">
                                 </a>
@@ -70,16 +70,16 @@
                                         <ul class="mega-menu mega-menu-one">
                                             <li>
                                                 <ul class="submenu mega-sub-menu mega-sub-menu-01">
-                                                    <li><a href="#">تحليل نتائج الفصل الأول </a></li>
-                                                    <li><a href="#">تحليل نتائج الفصل الثاني</a></li>
-                                                    <li><a href="#">تحليل نتائج الفصل الثالث </a></li>
-                                                    <li><a href="#">تحليل النتائج السنوية <span class="badge">جديد</span></a></li>
+                                                    <li><a href="Tahlil_T1.html">تحليل نتائج الفصل الأول </a></li>
+                                                    <li><a href="Tahlil_T2.html">تحليل نتائج الفصل الثاني</a></li>
+                                                    <li><a href="Tahlil_T3.html">تحليل نتائج الفصل الثالث </a></li>
+                                                    <li><a href="Tahlil_All.html">تحليل النتائج السنوية <span class="badge">جديد</span></a></li>
                                                 </ul>
                                             </li>
                                             <li>
                                                 <ul class="submenu mega-sub-menu mega-sub-menu-01">
-                                                    <li><a href="#">شهادة التعليم المتوسط <span class="badge">جديد</span></a></li>
-                                                    <li><a href="#">إمتحان تقييم المكتسبات  <span class="badge">جديد</span></a></li>
+                                                    <li><a href="Tahlil_Bem.html">شهادة التعليم المتوسط <span class="badge">جديد</span></a></li>
+                                                    <li><a href="Tahlil_5eme.html">إمتحان تقييم المكتسبات  <span class="badge">جديد</span></a></li>
                                                     <li><a href="#">صانع الشهادة المجاني  <span class="badge-1">متوقف</span></a></li>
                                                     <li><a href="#">تحميل برنامج الوجيز</a></li>
                                                     <li><a href="#">تحميل تطبيق  <span class="badge-1">متوقف</span></a></li>
@@ -88,8 +88,8 @@
                                             <li>
                                                 <ul class="submenu mega-sub-menu-01">
                                                     <li>
-                                                        <a href="https://1.envato.market/5bQ022">
-                                                            <img src="assets/images/others/mega-menu-image.webp" alt="advertising Image">
+                                                        <a href="https://t.me/Al_Wajeez_topic">
+                                                            <img src="assets/images/others/mega-menu-image.png" alt="advertising Image">
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -97,13 +97,13 @@
                                         </ul>
                                     </li>
 
-                                    <li class=""><a href="#">الدروس</a>
+                                    <li class=""><a href="course.html">الدروس</a>
                                     </li>
-                                    <li class=""><a href="#">سياسة خصوصية</a>
+                                    <li class=""><a href="terms-condition.html">سياسة خصوصية</a>
                                     </li>
-                                    <li class=""><a href="#">أسئلة شائعة</a>
+                                    <li class=""><a href="faq.html">أسئلة شائعة</a>
                                     </li>
-                                    <li class=""><a href="#">تواصل معنا</a>
+                                    <li class=""><a href="contact-me.html">تواصل معنا</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -124,7 +124,7 @@
                 <div class="inner">
                     <div class="header-top">
                         <div class="logo">
-                            <a href="#">
+                            <a href="index.html">
                                 <img class="logo-light" src="assets/images/logo/logo-dark.png" alt="Corporate Logo">
                                 <img class="logo-dark" src="assets/images/logo/logo-white.png" alt="Corporate Logo">
                             </a>
@@ -140,16 +140,16 @@
                             <ul class="mega-menu mega-menu-one">
                                 <li>
                                     <ul class="submenu mega-sub-menu mega-sub-menu-01">
-                                        <li><a href="#">تحليل نتائج الفصل الاول </a></li>
-                                        <li><a href="#">تحليل نتائج الفصل الثني</a></li>
-                                        <li><a href="#">تحليل نتائج الفصل الثالث</a></li>
-                                        <li><a href="#">تحليل النتائج السنوية <span class="badge">جديد</span></a></li>
+                                        <li><a href="Tahlil_T1.html">تحليل نتائج الفصل الاول </a></li>
+                                        <li><a href="Tahlil_T2.html">تحليل نتائج الفصل الثني</a></li>
+                                        <li><a href="Tahlil_T3.html">تحليل نتائج الفصل الثالث</a></li>
+                                        <li><a href="Tahlil_All.html">تحليل النتائج السنوية <span class="badge">جديد</span></a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <ul class="submenu mega-sub-menu mega-sub-menu-01">
-                                        <li><a href="#">شهادة التعليم المتوسط <span class="badge">جديد</span></a></li>
-                                        <li><a href="#">إمتحان تقييم المكتسبات <span class="badge">جديد</span></a></li>
+                                        <li><a href="Tahlil_Bem.html">شهادة التعليم المتوسط <span class="badge">جديد</span></a></li>
+                                        <li><a href="Tahlil_5eme.html">إمتحان تقييم المكتسبات <span class="badge">جديد</span></a></li>
                                         <li><a href="#">صانع الشهادات المجاني <span class="badge-1">متوقف</span></a></li>
                                         <li><a href="#">تحميل برامج الوجيز</a></li>
                                         <li><a href="#">تحميل تطبيق <span class="badge-1">متوقف</span></a></li>
@@ -158,21 +158,21 @@
                                 <li>
                                     <ul class="submenu mega-sub-menu-01">
                                         <li>
-                                            <a href="https://1.envato.market/5bQ022">
-                                                <img src="assets/images/others/mega-menu-image.webp" alt="advertising Image">
+                                            <a href="https://t.me/Al_Wajeez_topic">
+                                                <img src="assets/images/others/mega-menu-image.png" alt="advertising Image">
                                             </a>
                                         </li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
-                        <li class=""><a href="#">الدروس</a>
+                        <li class=""><a href="course.html">الدروس</a>
                         </li>
-                        <li class=""><a href="#">سياسة خصوصية</a>
+                        <li class=""><a href="terms-condition.html">سياسة خصوصية</a>
                         </li>
-                        <li class=""><a href="#">أسئلة شائعة</a>
+                        <li class=""><a href="faq.html">أسئلة شائعة</a>
                         </li>
-                        <li class=""><a href="#">تواصل معنا</a>
+                        <li class=""><a href="contact-me.html">تواصل معنا</a>
                         </li>
                     </ul>
                 </div>
