--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="header-mainnav">
                             <nav class="mainmenu-nav">
                                 <ul class="mainmenu">
-                                    <li class="has-droupdown"><a href="#">الرئيسية</a>
+                                    <li class="has-droupdown"><a href="index.html">الرئيسية</a>
                                         <ul class="mega-menu mega-menu-one">
                                             <li>
                                                 <ul class="submenu mega-sub-menu mega-sub-menu-01">
@@ -76,9 +76,9 @@
                                                 <ul class="submenu mega-sub-menu mega-sub-menu-01">
                                                     <li><a href="Tahlil_Bem.html">شهادة التعليم المتوسط <span class="badge">جديد</span></a></li>
                                                     <li><a href="Tahlil_5eme.html">إمتحان تقييم المكتسبات  <span class="badge">جديد</span></a></li>
-                                                    <li><a href="#">صانع الشهادة المجاني  <span class="badge-1">متوقف</span></a></li>
-                                                    <li><a href="#">تحميل برنامج الوجيز</a></li>
-                                                    <li><a href="#">تحميل تطبيق  <span class="badge-1">متوقف</span></a></li>
+                                                    <li><a href="coming-soon.html">صانع الشهادة المجاني  <span class="badge-1">متوقف</span></a></li>
+                                                    <li><a href="coming-soon.html">تحميل برنامج الوجيز</a></li>
+                                                    <li><a href="coming-soon.html">تحميل تطبيق  <span class="badge-1">متوقف</span></a></li>
                                                 </ul>
                                             </li>
                                             <li>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <ul class="mainmenu">
-                        <li class="has-droupdown"><a href="#">الرئيسية</a>
+                        <li class="has-droupdown"><a href="index.html">الرئيسية</a>
                             <ul class="mega-menu mega-menu-one">
                                 <li>
                                     <ul class="submenu mega-sub-menu mega-sub-menu-01">
@@ -146,9 +146,9 @@
                                     <ul class="submenu mega-sub-menu mega-sub-menu-01">
                                         <li><a href="Tahlil_Bem.html">شهادة التعليم المتوسط <span class="badge">جديد</span></a></li>
                                         <li><a href="Tahlil_5eme.html">إمتحان تقييم المكتسبات <span class="badge">جديد</span></a></li>
-                                        <li><a href="#">صانع الشهادات المجاني <span class="badge-1">متوقف</span></a></li>
-                                        <li><a href="#">تحميل برامج الوجيز</a></li>
-                                        <li><a href="#">تحميل تطبيق <span class="badge-1">متوقف</span></a></li>
+                                        <li><a href="coming-soon.html">صانع الشهادات المجاني <span class="badge-1">متوقف</span></a></li>
+                                        <li><a href="coming-soon.html">تحميل برامج الوجيز</a></li>
+                                        <li><a href="coming-soon.html">تحميل تطبيق <span class="badge-1">متوقف</span></a></li>
                                     </ul>
                                 </li>
                                 <li>
